# sorcy

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  REFERENCE_REPO_PATTERNS.md  TIERED_RANKING_HARNESS.md  install.ps1  install.sh  mise.toml  pyproject.toml
.cursor/commands/: pin-latest.md
.cursor/rules/: version-resolution.mdc
crates/sorcy-cli/: Cargo.toml
crates/sorcy-cli/src/: main.rs
crates/sorcy-core/: Cargo.toml
crates/sorcy-core/src/: lib.rs  model.rs  repo.rs  resolve.rs  scan.rs  settings.rs  skill.rs  source.rs
crates/sorcy-core/src/parse/: cpp.rs  mod.rs  npm.rs
crates/sorcy-core/src/ranking/: harness.rs  mod.rs  model.rs  overrides.rs  scenarios.rs  seeds.rs
crates/sorcy-core/tests/: integration_mvp.rs  live_registry_optional.rs  materialization_mvp.rs  rank_skill_mvp.rs  source_query_mvp.rs
manual-test-repos/: README.md
manual-test-repos/cargo-demo/: Cargo.toml
manual-test-repos/cpp-demo/: vcpkg-configuration.json
manual-test-repos/npm-demo/: package.json
manual-test-repos/python-demo/: pyproject.toml
scripts/: resolve-tool-version.sh
skills/sorcy-rank/: SKILL.md  SORCY_RANKINGS.md
src/: cli.rs  lib.rs  main.rs  model.rs  resolve.rs
src/parse/: cargo.rs  cpp.rs  mod.rs  npm.rs  python.rs
src/sorcy/: __init__.py  __main__.py  cli.py  source_resolver.py
tests/: integration_mvp.rs  test_cli.py
