[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sorcy"
version = "0.1.0"
description = "Generate Markdown source-repo pointers for Python dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "busy-earth" }]
dependencies = []

[project.scripts]
sorcy = "sorcy.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
