[package]
name = "sorcy-core"
version = "0.2.0"
edition = "2021"
description = "Core scanning and source resolution engine for sorcy."
license = "MIT"

[dependencies]
anyhow = "1"
regex = "1"
reqwest = { version = "=0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
walkdir = "2"

[dev-dependencies]
tempfile = "=3.27.0"
